--- a/archives/toutiao-search/2023-10-20.md
+++ b/archives/toutiao-search/2023-10-20.md
@@ -1,53 +1,74 @@
 # 2023-10-20
 
-共 213 条
+共 234 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Fri Oct 20 2023 14:00:58 GMT+0800 (China Standard Time) -->
-1. [A股再战3000点 这一次有何不同](https://so.toutiao.com/search?keyword=A股再战3000点+这一次有何不同)
-1. [男子用1元拍到奔驰车却遭提车难](https://so.toutiao.com/search?keyword=男子用1元拍到奔驰车却遭提车难)
-1. [3项“考古中国”项目取得重要进展](https://so.toutiao.com/search?keyword=3项“考古中国”项目取得重要进展)
-1. [男子取现451万 柜员发现异常后报警](https://so.toutiao.com/search?keyword=男子取现451万+柜员发现异常后报警)
-1. [普京再度视察特别军事行动指挥部](https://so.toutiao.com/search?keyword=普京再度视察特别军事行动指挥部)
-1. [两名儿童酒店门口避雨被保安驱赶](https://so.toutiao.com/search?keyword=两名儿童酒店门口避雨被保安驱赶)
-1. [美加州州长将率团访华 中方：欢迎](https://so.toutiao.com/search?keyword=美加州州长将率团访华+中方：欢迎)
-1. [湖北一化粪池发生意外致5人死亡](https://so.toutiao.com/search?keyword=湖北一化粪池发生意外致5人死亡)
+<!-- 最后更新时间 Fri Oct 20 2023 15:00:51 GMT+0800 (China Standard Time) -->
+1. [村庄拆迁后大量狗被主人遗弃](https://so.toutiao.com/search?keyword=村庄拆迁后大量狗被主人遗弃)
 1. [疑似日本游客在博物馆打强光拍文物](https://so.toutiao.com/search?keyword=疑似日本游客在博物馆打强光拍文物)
+1. [3项“考古中国”项目取得重要进展](https://so.toutiao.com/search?keyword=3项“考古中国”项目取得重要进展)
+1. [3000点关口为何如此重要](https://so.toutiao.com/search?keyword=3000点关口为何如此重要)
+1. [婴儿被拔倒刺为何心脏衰竭？医生解读](https://so.toutiao.com/search?keyword=婴儿被拔倒刺为何心脏衰竭？医生解读)
+1. [村干部为何频繁催交新农合](https://so.toutiao.com/search?keyword=村干部为何频繁催交新农合)
+1. [翻护网进轨道被撞身亡两人系夫妻](https://so.toutiao.com/search?keyword=翻护网进轨道被撞身亡两人系夫妻)
+1. [男子取现451万 柜员发现异常后报警](https://so.toutiao.com/search?keyword=男子取现451万+柜员发现异常后报警)
+1. [男子在校门口遛大型犬不拴绳](https://so.toutiao.com/search?keyword=男子在校门口遛大型犬不拴绳)
 1. [被狗咬伤女童去世？警方辟谣](https://so.toutiao.com/search?keyword=被狗咬伤女童去世？警方辟谣)
 1. [巴以冲突震动岛内蔡英文竟叫嚣备战](https://so.toutiao.com/search?keyword=巴以冲突震动岛内蔡英文竟叫嚣备战)
+1. [加沙地带残骸遍地](https://so.toutiao.com/search?keyword=加沙地带残骸遍地)
+1. [A股再战3000点 这一次有何不同](https://so.toutiao.com/search?keyword=A股再战3000点+这一次有何不同)
+1. [西方的干预会如何影响巴以局势发展](https://so.toutiao.com/search?keyword=西方的干预会如何影响巴以局势发展)
+1. [加沙医院到底是谁炸的](https://so.toutiao.com/search?keyword=加沙医院到底是谁炸的)
+1. [离开央视的主持人都去哪了](https://so.toutiao.com/search?keyword=离开央视的主持人都去哪了)
+1. [Meta规定“禁止赞扬哈马斯”](https://so.toutiao.com/search?keyword=Meta规定“禁止赞扬哈马斯”)
+1. [李玟将于21日在武汉下葬](https://so.toutiao.com/search?keyword=李玟将于21日在武汉下葬)
+1. [男子用1元拍到奔驰车却遭提车难](https://so.toutiao.com/search?keyword=男子用1元拍到奔驰车却遭提车难)
+1. [伊朗警告“其它各方”或卷入战争](https://so.toutiao.com/search?keyword=伊朗警告“其它各方”或卷入战争)
+1. [出租车公司回应宝马撞车事故](https://so.toutiao.com/search?keyword=出租车公司回应宝马撞车事故)
+1. [一辆敞篷车在高速路上来回变道](https://so.toutiao.com/search?keyword=一辆敞篷车在高速路上来回变道)
+1. [两名儿童酒店门口避雨被保安驱赶](https://so.toutiao.com/search?keyword=两名儿童酒店门口避雨被保安驱赶)
+1. [加沙人：孩子被杀了美国满意了吗](https://so.toutiao.com/search?keyword=加沙人：孩子被杀了美国满意了吗)
+1. [官方优化石墨物项临时出口管制措施](https://so.toutiao.com/search?keyword=官方优化石墨物项临时出口管制措施)
+1. [第十届乌镇戏剧节开幕](https://so.toutiao.com/search?keyword=第十届乌镇戏剧节开幕)
+1. [湖北一化粪池发生意外致5人死亡](https://so.toutiao.com/search?keyword=湖北一化粪池发生意外致5人死亡)
+1. [专家谈为什么教培行业必须“死”](https://so.toutiao.com/search?keyword=专家谈为什么教培行业必须“死”)
+1. [儿童积木现不雅图案 商家赔2元](https://so.toutiao.com/search?keyword=儿童积木现不雅图案+商家赔2元)
+1. [中美1.5轨对话举行](https://so.toutiao.com/search?keyword=中美1.5轨对话举行)
+1. [内蒙古火车撞人致2死 画面曝光](https://so.toutiao.com/search?keyword=内蒙古火车撞人致2死+画面曝光)
+1. [养犬办回应男子遛法斗遇查逃跑](https://so.toutiao.com/search?keyword=养犬办回应男子遛法斗遇查逃跑)
+1. [老人带男童回家被恶狗撕咬3分钟](https://so.toutiao.com/search?keyword=老人带男童回家被恶狗撕咬3分钟)
+1. [中东变局对中企有何影响](https://so.toutiao.com/search?keyword=中东变局对中企有何影响)
+1. [油价下周二迎来调整](https://so.toutiao.com/search?keyword=油价下周二迎来调整)
+1. [普京再度视察特别军事行动指挥部](https://so.toutiao.com/search?keyword=普京再度视察特别军事行动指挥部)
+1. [华为六周内售出160万部Mate60Pro](https://so.toutiao.com/search?keyword=华为六周内售出160万部Mate60Pro)
+1. [美加州州长将率团访华 中方：欢迎](https://so.toutiao.com/search?keyword=美加州州长将率团访华+中方：欢迎)
+1. [女孩自制计算器租同学一天赚20多元](https://so.toutiao.com/search?keyword=女孩自制计算器租同学一天赚20多元)
+1. [记者镜头定格雅万高铁时速350公里](https://so.toutiao.com/search?keyword=记者镜头定格雅万高铁时速350公里)
+1. [武汉一未拴绳杜宾犬咬人被没收](https://so.toutiao.com/search?keyword=武汉一未拴绳杜宾犬咬人被没收)
+1. [大巴车顶着交通执法人员前行数十米](https://so.toutiao.com/search?keyword=大巴车顶着交通执法人员前行数十米)
+1. [日媒称iPhone 15在中国“苦战”](https://so.toutiao.com/search?keyword=日媒称iPhone+15在中国“苦战”)
+1. [拜登重申对以方支持遭多名议员批评](https://so.toutiao.com/search?keyword=拜登重申对以方支持遭多名议员批评)
+1. [游客投喂可可西里网红狼](https://so.toutiao.com/search?keyword=游客投喂可可西里网红狼)
+1. [张小泉菜刀又现拍蒜断刀](https://so.toutiao.com/search?keyword=张小泉菜刀又现拍蒜断刀)
+1. [国考热门岗位竞争超“千里挑一”](https://so.toutiao.com/search?keyword=国考热门岗位竞争超“千里挑一”)
+1. [女白领住进山野探索开放式两性关系](https://so.toutiao.com/search?keyword=女白领住进山野探索开放式两性关系)
+1. [多个落马官员“美容腐败”细节](https://so.toutiao.com/search?keyword=多个落马官员“美容腐败”细节)
+1. [河北千亩农田被挖成大坑](https://so.toutiao.com/search?keyword=河北千亩农田被挖成大坑)
 1. [哈马斯称目前未有任何援助进入加沙](https://so.toutiao.com/search?keyword=哈马斯称目前未有任何援助进入加沙)
 1. [分析师解读沪指跌破3000点原因](https://so.toutiao.com/search?keyword=分析师解读沪指跌破3000点原因)
 1. [专家谈以色列是否具备地面打击能力](https://so.toutiao.com/search?keyword=专家谈以色列是否具备地面打击能力)
 1. [拜登呼吁民众对同意对以色列军援](https://so.toutiao.com/search?keyword=拜登呼吁民众对同意对以色列军援)
-1. [加沙地带残骸遍地](https://so.toutiao.com/search?keyword=加沙地带残骸遍地)
 1. [美军击落从也门发射的导弹和无人机](https://so.toutiao.com/search?keyword=美军击落从也门发射的导弹和无人机)
 1. [埃及要求巴以冲突双方停火6小时](https://so.toutiao.com/search?keyword=埃及要求巴以冲突双方停火6小时)
-1. [日媒称iPhone 15在中国“苦战”](https://so.toutiao.com/search?keyword=日媒称iPhone+15在中国“苦战”)
-1. [专家谈为什么教培行业必须“死”](https://so.toutiao.com/search?keyword=专家谈为什么教培行业必须“死”)
-1. [出租车公司回应宝马撞车事故](https://so.toutiao.com/search?keyword=出租车公司回应宝马撞车事故)
-1. [Meta规定“禁止赞扬哈马斯”](https://so.toutiao.com/search?keyword=Meta规定“禁止赞扬哈马斯”)
-1. [村干部为何频繁催交新农合](https://so.toutiao.com/search?keyword=村干部为何频繁催交新农合)
-1. [女孩自制计算器租同学一天赚20多元](https://so.toutiao.com/search?keyword=女孩自制计算器租同学一天赚20多元)
-1. [内蒙古火车撞人致2死 画面曝光](https://so.toutiao.com/search?keyword=内蒙古火车撞人致2死+画面曝光)
-1. [老人带男童回家被恶狗撕咬3分钟](https://so.toutiao.com/search?keyword=老人带男童回家被恶狗撕咬3分钟)
-1. [离开央视的主持人都去哪了](https://so.toutiao.com/search?keyword=离开央视的主持人都去哪了)
 1. [特斯拉市值一夜蒸发5239亿元](https://so.toutiao.com/search?keyword=特斯拉市值一夜蒸发5239亿元)
 1. [环球旅行小伙自嘲指望股市补贴旅费](https://so.toutiao.com/search?keyword=环球旅行小伙自嘲指望股市补贴旅费)
 1. [天津一儿童疑遭开门杀后被公交碾压](https://so.toutiao.com/search?keyword=天津一儿童疑遭开门杀后被公交碾压)
-1. [翻护网进轨道被撞身亡两人系夫妻](https://so.toutiao.com/search?keyword=翻护网进轨道被撞身亡两人系夫妻)
 1. [商家回应儿童积木现不雅图案：赔2元](https://so.toutiao.com/search?keyword=商家回应儿童积木现不雅图案：赔2元)
 1. [专家：台湾人患巴以冲突心理创伤症](https://so.toutiao.com/search?keyword=专家：台湾人患巴以冲突心理创伤症)
 1. [专家谈沪指破3000点次数超50次](https://so.toutiao.com/search?keyword=专家谈沪指破3000点次数超50次)
-1. [拜登重申对以方支持遭多名议员批评](https://so.toutiao.com/search?keyword=拜登重申对以方支持遭多名议员批评)
 1. [科大讯飞回应美国AI芯片出口管制](https://so.toutiao.com/search?keyword=科大讯飞回应美国AI芯片出口管制)
-1. [女白领住进山野探索开放式两性关系](https://so.toutiao.com/search?keyword=女白领住进山野探索开放式两性关系)
-1. [华为六周内售出160万部Mate60Pro](https://so.toutiao.com/search?keyword=华为六周内售出160万部Mate60Pro)
 1. [绝食24天的李在明将恢复履职](https://so.toutiao.com/search?keyword=绝食24天的李在明将恢复履职)
-1. [多个落马官员“美容腐败”细节](https://so.toutiao.com/search?keyword=多个落马官员“美容腐败”细节)
-1. [游客投喂可可西里网红狼](https://so.toutiao.com/search?keyword=游客投喂可可西里网红狼)
 1. [黄渤周迅新片建议未满18岁谨慎观看](https://so.toutiao.com/search?keyword=黄渤周迅新片建议未满18岁谨慎观看)
-1. [婴儿被拔倒刺为何心脏衰竭？医生解读](https://so.toutiao.com/search?keyword=婴儿被拔倒刺为何心脏衰竭？医生解读)
-1. [油价下周二迎来调整](https://so.toutiao.com/search?keyword=油价下周二迎来调整)
 1. [媒体批美国对华“核讹诈”](https://so.toutiao.com/search?keyword=媒体批美国对华“核讹诈”)
 1. [网友乘地铁发现警犬已戴上嘴套](https://so.toutiao.com/search?keyword=网友乘地铁发现警犬已戴上嘴套)
 1. [进小区先穿过地瓜田？业主质疑宣传](https://so.toutiao.com/search?keyword=进小区先穿过地瓜田？业主质疑宣传)
