--- a/archives/toutiao-search/2023-10-20.md
+++ b/archives/toutiao-search/2023-10-20.md
@@ -1,58 +1,81 @@
 # 2023-10-20
 
-共 234 条
+共 253 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Fri Oct 20 2023 15:00:51 GMT+0800 (China Standard Time) -->
-1. [村庄拆迁后大量狗被主人遗弃](https://so.toutiao.com/search?keyword=村庄拆迁后大量狗被主人遗弃)
-1. [疑似日本游客在博物馆打强光拍文物](https://so.toutiao.com/search?keyword=疑似日本游客在博物馆打强光拍文物)
+<!-- 最后更新时间 Fri Oct 20 2023 16:00:45 GMT+0800 (China Standard Time) -->
+1. [以军方称哈马斯至少扣押以方203人](https://so.toutiao.com/search?keyword=以军方称哈马斯至少扣押以方203人)
+1. [四川泸州坠江宝马打捞现场](https://so.toutiao.com/search?keyword=四川泸州坠江宝马打捞现场)
 1. [3项“考古中国”项目取得重要进展](https://so.toutiao.com/search?keyword=3项“考古中国”项目取得重要进展)
-1. [3000点关口为何如此重要](https://so.toutiao.com/search?keyword=3000点关口为何如此重要)
-1. [婴儿被拔倒刺为何心脏衰竭？医生解读](https://so.toutiao.com/search?keyword=婴儿被拔倒刺为何心脏衰竭？医生解读)
+1. [高架上因不满对方突然变道将其打晕](https://so.toutiao.com/search?keyword=高架上因不满对方突然变道将其打晕)
+1. [千余名中国公民已离开以色列](https://so.toutiao.com/search?keyword=千余名中国公民已离开以色列)
+1. [折叠屏手机销量持续“狂飙”](https://so.toutiao.com/search?keyword=折叠屏手机销量持续“狂飙”)
 1. [村干部为何频繁催交新农合](https://so.toutiao.com/search?keyword=村干部为何频繁催交新农合)
-1. [翻护网进轨道被撞身亡两人系夫妻](https://so.toutiao.com/search?keyword=翻护网进轨道被撞身亡两人系夫妻)
-1. [男子取现451万 柜员发现异常后报警](https://so.toutiao.com/search?keyword=男子取现451万+柜员发现异常后报警)
-1. [男子在校门口遛大型犬不拴绳](https://so.toutiao.com/search?keyword=男子在校门口遛大型犬不拴绳)
+1. [油价下周二迎来调整](https://so.toutiao.com/search?keyword=油价下周二迎来调整)
+1. [男子用1元拍到奔驰车却遭提车难](https://so.toutiao.com/search?keyword=男子用1元拍到奔驰车却遭提车难)
 1. [被狗咬伤女童去世？警方辟谣](https://so.toutiao.com/search?keyword=被狗咬伤女童去世？警方辟谣)
 1. [巴以冲突震动岛内蔡英文竟叫嚣备战](https://so.toutiao.com/search?keyword=巴以冲突震动岛内蔡英文竟叫嚣备战)
 1. [加沙地带残骸遍地](https://so.toutiao.com/search?keyword=加沙地带残骸遍地)
 1. [A股再战3000点 这一次有何不同](https://so.toutiao.com/search?keyword=A股再战3000点+这一次有何不同)
+1. [Meta规定“禁止赞扬哈马斯”](https://so.toutiao.com/search?keyword=Meta规定“禁止赞扬哈马斯”)
+1. [男子取现451万 柜员发现异常后报警](https://so.toutiao.com/search?keyword=男子取现451万+柜员发现异常后报警)
+1. [收评：沪指周线三连阴失守3000点](https://so.toutiao.com/search?keyword=收评：沪指周线三连阴失守3000点)
+1. [疑似日本游客在博物馆打强光拍文物](https://so.toutiao.com/search?keyword=疑似日本游客在博物馆打强光拍文物)
+1. [湖北一化粪池发生意外致5人死亡](https://so.toutiao.com/search?keyword=湖北一化粪池发生意外致5人死亡)
+1. [两名儿童酒店门口避雨被保安驱赶](https://so.toutiao.com/search?keyword=两名儿童酒店门口避雨被保安驱赶)
+1. [狗嘴套销量近期倍增 有店铺卖断货](https://so.toutiao.com/search?keyword=狗嘴套销量近期倍增+有店铺卖断货)
+1. [出租车公司回应宝马撞车事故](https://so.toutiao.com/search?keyword=出租车公司回应宝马撞车事故)
+1. [以色列将从以黎边境城镇撤离居民](https://so.toutiao.com/search?keyword=以色列将从以黎边境城镇撤离居民)
+1. [老人带男童回家被恶狗撕咬3分钟](https://so.toutiao.com/search?keyword=老人带男童回家被恶狗撕咬3分钟)
+1. [台风“三巴”致广西北海市区内涝](https://so.toutiao.com/search?keyword=台风“三巴”致广西北海市区内涝)
+1. [离开央视的主持人都去哪了](https://so.toutiao.com/search?keyword=离开央视的主持人都去哪了)
+1. [翻护网进轨道被撞身亡两人系夫妻](https://so.toutiao.com/search?keyword=翻护网进轨道被撞身亡两人系夫妻)
+1. [普京再度视察特别军事行动指挥部](https://so.toutiao.com/search?keyword=普京再度视察特别军事行动指挥部)
+1. [专家谈为什么教培行业必须“死”](https://so.toutiao.com/search?keyword=专家谈为什么教培行业必须“死”)
+1. [3000点关口为何如此重要](https://so.toutiao.com/search?keyword=3000点关口为何如此重要)
+1. [蔡正元赞马英九举“九二共识”大旗](https://so.toutiao.com/search?keyword=蔡正元赞马英九举“九二共识”大旗)
+1. [多个落马官员“美容腐败”细节](https://so.toutiao.com/search?keyword=多个落马官员“美容腐败”细节)
+1. [日媒称iPhone 15在中国“苦战”](https://so.toutiao.com/search?keyword=日媒称iPhone+15在中国“苦战”)
+1. [华为六周内售出160万部Mate60Pro](https://so.toutiao.com/search?keyword=华为六周内售出160万部Mate60Pro)
+1. [青岛啤酒厂工人被曝在原料仓小便](https://so.toutiao.com/search?keyword=青岛啤酒厂工人被曝在原料仓小便)
+1. [普京访华携带的黑色手提箱备受关注](https://so.toutiao.com/search?keyword=普京访华携带的黑色手提箱备受关注)
+1. [杨文杰卸任碧桂园地产法定代表人](https://so.toutiao.com/search?keyword=杨文杰卸任碧桂园地产法定代表人)
+1. [定远靖远来远3艘甲午沉舰被发现](https://so.toutiao.com/search?keyword=定远靖远来远3艘甲午沉舰被发现)
+1. [84岁钢琴家刘诗昆得子 发文感谢爱人](https://so.toutiao.com/search?keyword=84岁钢琴家刘诗昆得子+发文感谢爱人)
+1. [内蒙古一在建厂房坍塌致3死8伤](https://so.toutiao.com/search?keyword=内蒙古一在建厂房坍塌致3死8伤)
+1. [双脚出现9个症状可能是疾病信号](https://so.toutiao.com/search?keyword=双脚出现9个症状可能是疾病信号)
+1. [女孩自制计算器租同学一天赚20多元](https://so.toutiao.com/search?keyword=女孩自制计算器租同学一天赚20多元)
+1. [游客投喂可可西里网红狼](https://so.toutiao.com/search?keyword=游客投喂可可西里网红狼)
+1. [大巴车顶着交通执法人员前行数十米](https://so.toutiao.com/search?keyword=大巴车顶着交通执法人员前行数十米)
+1. [警方回应执法人员到餐馆捕狗](https://so.toutiao.com/search?keyword=警方回应执法人员到餐馆捕狗)
+1. [卖旧手机之前的注意事项](https://so.toutiao.com/search?keyword=卖旧手机之前的注意事项)
+1. [网友乘地铁发现警犬已戴上嘴套](https://so.toutiao.com/search?keyword=网友乘地铁发现警犬已戴上嘴套)
+1. [警方回应女子产后疑被婆家逼至跳楼](https://so.toutiao.com/search?keyword=警方回应女子产后疑被婆家逼至跳楼)
+1. [花鼓戏演员被两男子非礼 丈夫发声](https://so.toutiao.com/search?keyword=花鼓戏演员被两男子非礼+丈夫发声)
+1. [瑞银：上调对中国的经济增长预测](https://so.toutiao.com/search?keyword=瑞银：上调对中国的经济增长预测)
+1. [李玟将于21日在武汉下葬](https://so.toutiao.com/search?keyword=李玟将于21日在武汉下葬)
+1. [村庄拆迁后大量狗被主人遗弃](https://so.toutiao.com/search?keyword=村庄拆迁后大量狗被主人遗弃)
+1. [婴儿被拔倒刺为何心脏衰竭？医生解读](https://so.toutiao.com/search?keyword=婴儿被拔倒刺为何心脏衰竭？医生解读)
+1. [男子在校门口遛大型犬不拴绳](https://so.toutiao.com/search?keyword=男子在校门口遛大型犬不拴绳)
 1. [西方的干预会如何影响巴以局势发展](https://so.toutiao.com/search?keyword=西方的干预会如何影响巴以局势发展)
 1. [加沙医院到底是谁炸的](https://so.toutiao.com/search?keyword=加沙医院到底是谁炸的)
-1. [离开央视的主持人都去哪了](https://so.toutiao.com/search?keyword=离开央视的主持人都去哪了)
-1. [Meta规定“禁止赞扬哈马斯”](https://so.toutiao.com/search?keyword=Meta规定“禁止赞扬哈马斯”)
-1. [李玟将于21日在武汉下葬](https://so.toutiao.com/search?keyword=李玟将于21日在武汉下葬)
-1. [男子用1元拍到奔驰车却遭提车难](https://so.toutiao.com/search?keyword=男子用1元拍到奔驰车却遭提车难)
 1. [伊朗警告“其它各方”或卷入战争](https://so.toutiao.com/search?keyword=伊朗警告“其它各方”或卷入战争)
-1. [出租车公司回应宝马撞车事故](https://so.toutiao.com/search?keyword=出租车公司回应宝马撞车事故)
 1. [一辆敞篷车在高速路上来回变道](https://so.toutiao.com/search?keyword=一辆敞篷车在高速路上来回变道)
-1. [两名儿童酒店门口避雨被保安驱赶](https://so.toutiao.com/search?keyword=两名儿童酒店门口避雨被保安驱赶)
 1. [加沙人：孩子被杀了美国满意了吗](https://so.toutiao.com/search?keyword=加沙人：孩子被杀了美国满意了吗)
 1. [官方优化石墨物项临时出口管制措施](https://so.toutiao.com/search?keyword=官方优化石墨物项临时出口管制措施)
 1. [第十届乌镇戏剧节开幕](https://so.toutiao.com/search?keyword=第十届乌镇戏剧节开幕)
-1. [湖北一化粪池发生意外致5人死亡](https://so.toutiao.com/search?keyword=湖北一化粪池发生意外致5人死亡)
-1. [专家谈为什么教培行业必须“死”](https://so.toutiao.com/search?keyword=专家谈为什么教培行业必须“死”)
 1. [儿童积木现不雅图案 商家赔2元](https://so.toutiao.com/search?keyword=儿童积木现不雅图案+商家赔2元)
 1. [中美1.5轨对话举行](https://so.toutiao.com/search?keyword=中美1.5轨对话举行)
 1. [内蒙古火车撞人致2死 画面曝光](https://so.toutiao.com/search?keyword=内蒙古火车撞人致2死+画面曝光)
 1. [养犬办回应男子遛法斗遇查逃跑](https://so.toutiao.com/search?keyword=养犬办回应男子遛法斗遇查逃跑)
-1. [老人带男童回家被恶狗撕咬3分钟](https://so.toutiao.com/search?keyword=老人带男童回家被恶狗撕咬3分钟)
 1. [中东变局对中企有何影响](https://so.toutiao.com/search?keyword=中东变局对中企有何影响)
-1. [油价下周二迎来调整](https://so.toutiao.com/search?keyword=油价下周二迎来调整)
-1. [普京再度视察特别军事行动指挥部](https://so.toutiao.com/search?keyword=普京再度视察特别军事行动指挥部)
-1. [华为六周内售出160万部Mate60Pro](https://so.toutiao.com/search?keyword=华为六周内售出160万部Mate60Pro)
 1. [美加州州长将率团访华 中方：欢迎](https://so.toutiao.com/search?keyword=美加州州长将率团访华+中方：欢迎)
-1. [女孩自制计算器租同学一天赚20多元](https://so.toutiao.com/search?keyword=女孩自制计算器租同学一天赚20多元)
 1. [记者镜头定格雅万高铁时速350公里](https://so.toutiao.com/search?keyword=记者镜头定格雅万高铁时速350公里)
 1. [武汉一未拴绳杜宾犬咬人被没收](https://so.toutiao.com/search?keyword=武汉一未拴绳杜宾犬咬人被没收)
-1. [大巴车顶着交通执法人员前行数十米](https://so.toutiao.com/search?keyword=大巴车顶着交通执法人员前行数十米)
-1. [日媒称iPhone 15在中国“苦战”](https://so.toutiao.com/search?keyword=日媒称iPhone+15在中国“苦战”)
 1. [拜登重申对以方支持遭多名议员批评](https://so.toutiao.com/search?keyword=拜登重申对以方支持遭多名议员批评)
-1. [游客投喂可可西里网红狼](https://so.toutiao.com/search?keyword=游客投喂可可西里网红狼)
 1. [张小泉菜刀又现拍蒜断刀](https://so.toutiao.com/search?keyword=张小泉菜刀又现拍蒜断刀)
 1. [国考热门岗位竞争超“千里挑一”](https://so.toutiao.com/search?keyword=国考热门岗位竞争超“千里挑一”)
 1. [女白领住进山野探索开放式两性关系](https://so.toutiao.com/search?keyword=女白领住进山野探索开放式两性关系)
-1. [多个落马官员“美容腐败”细节](https://so.toutiao.com/search?keyword=多个落马官员“美容腐败”细节)
 1. [河北千亩农田被挖成大坑](https://so.toutiao.com/search?keyword=河北千亩农田被挖成大坑)
 1. [哈马斯称目前未有任何援助进入加沙](https://so.toutiao.com/search?keyword=哈马斯称目前未有任何援助进入加沙)
 1. [分析师解读沪指跌破3000点原因](https://so.toutiao.com/search?keyword=分析师解读沪指跌破3000点原因)
@@ -70,11 +93,9 @@
 1. [绝食24天的李在明将恢复履职](https://so.toutiao.com/search?keyword=绝食24天的李在明将恢复履职)
 1. [黄渤周迅新片建议未满18岁谨慎观看](https://so.toutiao.com/search?keyword=黄渤周迅新片建议未满18岁谨慎观看)
 1. [媒体批美国对华“核讹诈”](https://so.toutiao.com/search?keyword=媒体批美国对华“核讹诈”)
-1. [网友乘地铁发现警犬已戴上嘴套](https://so.toutiao.com/search?keyword=网友乘地铁发现警犬已戴上嘴套)
 1. [进小区先穿过地瓜田？业主质疑宣传](https://so.toutiao.com/search?keyword=进小区先穿过地瓜田？业主质疑宣传)
 1. [律师：抢运动员水杯女子构成抢夺罪](https://so.toutiao.com/search?keyword=律师：抢运动员水杯女子构成抢夺罪)
 1. [三只羊沈阳分公司开业](https://so.toutiao.com/search?keyword=三只羊沈阳分公司开业)
-1. [定远靖远来远3艘甲午沉舰被发现](https://so.toutiao.com/search?keyword=定远靖远来远3艘甲午沉舰被发现)
 1. [普京在京开记者会 出场满满中国风](https://so.toutiao.com/search?keyword=普京在京开记者会+出场满满中国风)
 1. [网友：智利总统来找我买水晶了](https://so.toutiao.com/search?keyword=网友：智利总统来找我买水晶了)
 1. [媒体：碧桂园求解境外债困局](https://so.toutiao.com/search?keyword=媒体：碧桂园求解境外债困局)
@@ -108,8 +129,6 @@
 1. [广东茂名暴雨学校停课](https://so.toutiao.com/search?keyword=广东茂名暴雨学校停课)
 1. [泰国总理谈“一带一路”论坛](https://so.toutiao.com/search?keyword=泰国总理谈“一带一路”论坛)
 1. [媒体：“中国经济衰退论”可休矣](https://so.toutiao.com/search?keyword=媒体：“中国经济衰退论”可休矣)
-1. [警方回应女子产后疑被婆家逼至跳楼](https://so.toutiao.com/search?keyword=警方回应女子产后疑被婆家逼至跳楼)
-1. [花鼓戏演员被两男子非礼 丈夫发声](https://so.toutiao.com/search?keyword=花鼓戏演员被两男子非礼+丈夫发声)
 1. [农业执法大队检查农机驾驶证引争议](https://so.toutiao.com/search?keyword=农业执法大队检查农机驾驶证引争议)
 1. [永乐桥见证创新高地在海河畔崛起](https://so.toutiao.com/search?keyword=永乐桥见证创新高地在海河畔崛起)
 1. [男子试驾电动车撞倒行人致十级伤残](https://so.toutiao.com/search?keyword=男子试驾电动车撞倒行人致十级伤残)
