--- a/archives/toutiao-search/2023-10-20.md
+++ b/archives/toutiao-search/2023-10-20.md
@@ -1,59 +1,84 @@
 # 2023-10-20
 
-共 253 条
+共 274 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Fri Oct 20 2023 16:00:45 GMT+0800 (China Standard Time) -->
-1. [以军方称哈马斯至少扣押以方203人](https://so.toutiao.com/search?keyword=以军方称哈马斯至少扣押以方203人)
-1. [四川泸州坠江宝马打捞现场](https://so.toutiao.com/search?keyword=四川泸州坠江宝马打捞现场)
+<!-- 最后更新时间 Fri Oct 20 2023 17:00:57 GMT+0800 (China Standard Time) -->
+1. [网友画图解读广州出租撞宝马过程](https://so.toutiao.com/search?keyword=网友画图解读广州出租撞宝马过程)
+1. [上海高架“拳王”打晕变道司机](https://so.toutiao.com/search?keyword=上海高架“拳王”打晕变道司机)
 1. [3项“考古中国”项目取得重要进展](https://so.toutiao.com/search?keyword=3项“考古中国”项目取得重要进展)
-1. [高架上因不满对方突然变道将其打晕](https://so.toutiao.com/search?keyword=高架上因不满对方突然变道将其打晕)
-1. [千余名中国公民已离开以色列](https://so.toutiao.com/search?keyword=千余名中国公民已离开以色列)
-1. [折叠屏手机销量持续“狂飙”](https://so.toutiao.com/search?keyword=折叠屏手机销量持续“狂飙”)
-1. [村干部为何频繁催交新农合](https://so.toutiao.com/search?keyword=村干部为何频繁催交新农合)
+1. [普京访华携带的黑色手提箱备受关注](https://so.toutiao.com/search?keyword=普京访华携带的黑色手提箱备受关注)
+1. [酒店保安驱赶避雨儿童](https://so.toutiao.com/search?keyword=酒店保安驱赶避雨儿童)
 1. [油价下周二迎来调整](https://so.toutiao.com/search?keyword=油价下周二迎来调整)
-1. [男子用1元拍到奔驰车却遭提车难](https://so.toutiao.com/search?keyword=男子用1元拍到奔驰车却遭提车难)
-1. [被狗咬伤女童去世？警方辟谣](https://so.toutiao.com/search?keyword=被狗咬伤女童去世？警方辟谣)
+1. [普京再度视察特别军事行动指挥部](https://so.toutiao.com/search?keyword=普京再度视察特别军事行动指挥部)
+1. [鞍钢集团与中兴通讯签战略合作协议](https://so.toutiao.com/search?keyword=鞍钢集团与中兴通讯签战略合作协议)
+1. [身份证会被手机消磁吗？真相来了](https://so.toutiao.com/search?keyword=身份证会被手机消磁吗？真相来了)
+1. [男子买砗磲摆件3年后被刑拘](https://so.toutiao.com/search?keyword=男子买砗磲摆件3年后被刑拘)
 1. [巴以冲突震动岛内蔡英文竟叫嚣备战](https://so.toutiao.com/search?keyword=巴以冲突震动岛内蔡英文竟叫嚣备战)
 1. [加沙地带残骸遍地](https://so.toutiao.com/search?keyword=加沙地带残骸遍地)
+1. [巴勒斯坦民众与以色列军警发生冲突](https://so.toutiao.com/search?keyword=巴勒斯坦民众与以色列军警发生冲突)
 1. [A股再战3000点 这一次有何不同](https://so.toutiao.com/search?keyword=A股再战3000点+这一次有何不同)
-1. [Meta规定“禁止赞扬哈马斯”](https://so.toutiao.com/search?keyword=Meta规定“禁止赞扬哈马斯”)
+1. [专家：中东武装组织已出现联动苗头](https://so.toutiao.com/search?keyword=专家：中东武装组织已出现联动苗头)
+1. [村干部为何频繁催交新农合](https://so.toutiao.com/search?keyword=村干部为何频繁催交新农合)
+1. [董宇辉求俞敏洪带他去相亲](https://so.toutiao.com/search?keyword=董宇辉求俞敏洪带他去相亲)
+1. [交警给违规车辆拍照贴条气笑了](https://so.toutiao.com/search?keyword=交警给违规车辆拍照贴条气笑了)
+1. [巴以地区冲突引发“蝴蝶效应”](https://so.toutiao.com/search?keyword=巴以地区冲突引发“蝴蝶效应”)
 1. [男子取现451万 柜员发现异常后报警](https://so.toutiao.com/search?keyword=男子取现451万+柜员发现异常后报警)
+1. [出租车公司回应宝马撞车事故](https://so.toutiao.com/search?keyword=出租车公司回应宝马撞车事故)
+1. [日媒称iPhone 15在中国“苦战”](https://so.toutiao.com/search?keyword=日媒称iPhone+15在中国“苦战”)
+1. [男子用1元拍到奔驰车却遭提车难](https://so.toutiao.com/search?keyword=男子用1元拍到奔驰车却遭提车难)
+1. [媒体：陪马龙度过漫长岁月](https://so.toutiao.com/search?keyword=媒体：陪马龙度过漫长岁月)
+1. [成都恶犬伤童事件五大疑问](https://so.toutiao.com/search?keyword=成都恶犬伤童事件五大疑问)
+1. [越南一男子持刀捅死情人后跳桥自杀](https://so.toutiao.com/search?keyword=越南一男子持刀捅死情人后跳桥自杀)
+1. [俄发布摧毁乌军“星链”终端视频](https://so.toutiao.com/search?keyword=俄发布摧毁乌军“星链”终端视频)
+1. [四川泸州坠江宝马打捞现场](https://so.toutiao.com/search?keyword=四川泸州坠江宝马打捞现场)
+1. [湖北一化粪池发生意外致5人死亡](https://so.toutiao.com/search?keyword=湖北一化粪池发生意外致5人死亡)
+1. [李玟将于21日在武汉下葬](https://so.toutiao.com/search?keyword=李玟将于21日在武汉下葬)
+1. [千余名中国公民已离开以色列](https://so.toutiao.com/search?keyword=千余名中国公民已离开以色列)
+1. [Meta规定“禁止赞扬哈马斯”](https://so.toutiao.com/search?keyword=Meta规定“禁止赞扬哈马斯”)
+1. [84岁钢琴家刘诗昆得子 发文感谢爱人](https://so.toutiao.com/search?keyword=84岁钢琴家刘诗昆得子+发文感谢爱人)
+1. [日本前首相：日中关系2010年后生变](https://so.toutiao.com/search?keyword=日本前首相：日中关系2010年后生变)
+1. [楼上装地暖砸穿楼下天花板](https://so.toutiao.com/search?keyword=楼上装地暖砸穿楼下天花板)
+1. [男子持刀抢劫金店失败后企图自杀](https://so.toutiao.com/search?keyword=男子持刀抢劫金店失败后企图自杀)
+1. [华为六周内售出160万部Mate60Pro](https://so.toutiao.com/search?keyword=华为六周内售出160万部Mate60Pro)
+1. [共建“一带一路”十周年重磅纪录片](https://so.toutiao.com/search?keyword=共建“一带一路”十周年重磅纪录片)
+1. [情侣住酒店一年后收到5段亲密视频](https://so.toutiao.com/search?keyword=情侣住酒店一年后收到5段亲密视频)
+1. [老人带男童回家被恶狗撕咬3分钟](https://so.toutiao.com/search?keyword=老人带男童回家被恶狗撕咬3分钟)
+1. [卖旧手机之前的注意事项](https://so.toutiao.com/search?keyword=卖旧手机之前的注意事项)
+1. [离开央视的主持人都去哪了](https://so.toutiao.com/search?keyword=离开央视的主持人都去哪了)
+1. [阿联酋高官点赞“一带一路”倡议](https://so.toutiao.com/search?keyword=阿联酋高官点赞“一带一路”倡议)
+1. [儿童积木现不雅图案 商家赔2元](https://so.toutiao.com/search?keyword=儿童积木现不雅图案+商家赔2元)
+1. [专家：台湾人患巴以冲突心理创伤症](https://so.toutiao.com/search?keyword=专家：台湾人患巴以冲突心理创伤症)
+1. [青岛啤酒厂工人被曝在原料仓小便](https://so.toutiao.com/search?keyword=青岛啤酒厂工人被曝在原料仓小便)
+1. [女孩自制计算器租同学一天赚20多元](https://so.toutiao.com/search?keyword=女孩自制计算器租同学一天赚20多元)
+1. [750克超早产宝宝救治后健康出院](https://so.toutiao.com/search?keyword=750克超早产宝宝救治后健康出院)
+1. [花鼓戏演员被两男子非礼 丈夫发声](https://so.toutiao.com/search?keyword=花鼓戏演员被两男子非礼+丈夫发声)
+1. [网友：智利总统来找我买水晶了](https://so.toutiao.com/search?keyword=网友：智利总统来找我买水晶了)
+1. [以军方称哈马斯至少扣押以方203人](https://so.toutiao.com/search?keyword=以军方称哈马斯至少扣押以方203人)
+1. [高架上因不满对方突然变道将其打晕](https://so.toutiao.com/search?keyword=高架上因不满对方突然变道将其打晕)
+1. [折叠屏手机销量持续“狂飙”](https://so.toutiao.com/search?keyword=折叠屏手机销量持续“狂飙”)
+1. [被狗咬伤女童去世？警方辟谣](https://so.toutiao.com/search?keyword=被狗咬伤女童去世？警方辟谣)
 1. [收评：沪指周线三连阴失守3000点](https://so.toutiao.com/search?keyword=收评：沪指周线三连阴失守3000点)
 1. [疑似日本游客在博物馆打强光拍文物](https://so.toutiao.com/search?keyword=疑似日本游客在博物馆打强光拍文物)
-1. [湖北一化粪池发生意外致5人死亡](https://so.toutiao.com/search?keyword=湖北一化粪池发生意外致5人死亡)
 1. [两名儿童酒店门口避雨被保安驱赶](https://so.toutiao.com/search?keyword=两名儿童酒店门口避雨被保安驱赶)
 1. [狗嘴套销量近期倍增 有店铺卖断货](https://so.toutiao.com/search?keyword=狗嘴套销量近期倍增+有店铺卖断货)
-1. [出租车公司回应宝马撞车事故](https://so.toutiao.com/search?keyword=出租车公司回应宝马撞车事故)
 1. [以色列将从以黎边境城镇撤离居民](https://so.toutiao.com/search?keyword=以色列将从以黎边境城镇撤离居民)
-1. [老人带男童回家被恶狗撕咬3分钟](https://so.toutiao.com/search?keyword=老人带男童回家被恶狗撕咬3分钟)
 1. [台风“三巴”致广西北海市区内涝](https://so.toutiao.com/search?keyword=台风“三巴”致广西北海市区内涝)
-1. [离开央视的主持人都去哪了](https://so.toutiao.com/search?keyword=离开央视的主持人都去哪了)
 1. [翻护网进轨道被撞身亡两人系夫妻](https://so.toutiao.com/search?keyword=翻护网进轨道被撞身亡两人系夫妻)
-1. [普京再度视察特别军事行动指挥部](https://so.toutiao.com/search?keyword=普京再度视察特别军事行动指挥部)
 1. [专家谈为什么教培行业必须“死”](https://so.toutiao.com/search?keyword=专家谈为什么教培行业必须“死”)
 1. [3000点关口为何如此重要](https://so.toutiao.com/search?keyword=3000点关口为何如此重要)
 1. [蔡正元赞马英九举“九二共识”大旗](https://so.toutiao.com/search?keyword=蔡正元赞马英九举“九二共识”大旗)
 1. [多个落马官员“美容腐败”细节](https://so.toutiao.com/search?keyword=多个落马官员“美容腐败”细节)
-1. [日媒称iPhone 15在中国“苦战”](https://so.toutiao.com/search?keyword=日媒称iPhone+15在中国“苦战”)
-1. [华为六周内售出160万部Mate60Pro](https://so.toutiao.com/search?keyword=华为六周内售出160万部Mate60Pro)
-1. [青岛啤酒厂工人被曝在原料仓小便](https://so.toutiao.com/search?keyword=青岛啤酒厂工人被曝在原料仓小便)
-1. [普京访华携带的黑色手提箱备受关注](https://so.toutiao.com/search?keyword=普京访华携带的黑色手提箱备受关注)
 1. [杨文杰卸任碧桂园地产法定代表人](https://so.toutiao.com/search?keyword=杨文杰卸任碧桂园地产法定代表人)
 1. [定远靖远来远3艘甲午沉舰被发现](https://so.toutiao.com/search?keyword=定远靖远来远3艘甲午沉舰被发现)
-1. [84岁钢琴家刘诗昆得子 发文感谢爱人](https://so.toutiao.com/search?keyword=84岁钢琴家刘诗昆得子+发文感谢爱人)
 1. [内蒙古一在建厂房坍塌致3死8伤](https://so.toutiao.com/search?keyword=内蒙古一在建厂房坍塌致3死8伤)
 1. [双脚出现9个症状可能是疾病信号](https://so.toutiao.com/search?keyword=双脚出现9个症状可能是疾病信号)
-1. [女孩自制计算器租同学一天赚20多元](https://so.toutiao.com/search?keyword=女孩自制计算器租同学一天赚20多元)
 1. [游客投喂可可西里网红狼](https://so.toutiao.com/search?keyword=游客投喂可可西里网红狼)
 1. [大巴车顶着交通执法人员前行数十米](https://so.toutiao.com/search?keyword=大巴车顶着交通执法人员前行数十米)
 1. [警方回应执法人员到餐馆捕狗](https://so.toutiao.com/search?keyword=警方回应执法人员到餐馆捕狗)
-1. [卖旧手机之前的注意事项](https://so.toutiao.com/search?keyword=卖旧手机之前的注意事项)
 1. [网友乘地铁发现警犬已戴上嘴套](https://so.toutiao.com/search?keyword=网友乘地铁发现警犬已戴上嘴套)
 1. [警方回应女子产后疑被婆家逼至跳楼](https://so.toutiao.com/search?keyword=警方回应女子产后疑被婆家逼至跳楼)
-1. [花鼓戏演员被两男子非礼 丈夫发声](https://so.toutiao.com/search?keyword=花鼓戏演员被两男子非礼+丈夫发声)
 1. [瑞银：上调对中国的经济增长预测](https://so.toutiao.com/search?keyword=瑞银：上调对中国的经济增长预测)
-1. [李玟将于21日在武汉下葬](https://so.toutiao.com/search?keyword=李玟将于21日在武汉下葬)
 1. [村庄拆迁后大量狗被主人遗弃](https://so.toutiao.com/search?keyword=村庄拆迁后大量狗被主人遗弃)
 1. [婴儿被拔倒刺为何心脏衰竭？医生解读](https://so.toutiao.com/search?keyword=婴儿被拔倒刺为何心脏衰竭？医生解读)
 1. [男子在校门口遛大型犬不拴绳](https://so.toutiao.com/search?keyword=男子在校门口遛大型犬不拴绳)
@@ -64,7 +89,6 @@
 1. [加沙人：孩子被杀了美国满意了吗](https://so.toutiao.com/search?keyword=加沙人：孩子被杀了美国满意了吗)
 1. [官方优化石墨物项临时出口管制措施](https://so.toutiao.com/search?keyword=官方优化石墨物项临时出口管制措施)
 1. [第十届乌镇戏剧节开幕](https://so.toutiao.com/search?keyword=第十届乌镇戏剧节开幕)
-1. [儿童积木现不雅图案 商家赔2元](https://so.toutiao.com/search?keyword=儿童积木现不雅图案+商家赔2元)
 1. [中美1.5轨对话举行](https://so.toutiao.com/search?keyword=中美1.5轨对话举行)
 1. [内蒙古火车撞人致2死 画面曝光](https://so.toutiao.com/search?keyword=内蒙古火车撞人致2死+画面曝光)
 1. [养犬办回应男子遛法斗遇查逃跑](https://so.toutiao.com/search?keyword=养犬办回应男子遛法斗遇查逃跑)
@@ -87,7 +111,6 @@
 1. [环球旅行小伙自嘲指望股市补贴旅费](https://so.toutiao.com/search?keyword=环球旅行小伙自嘲指望股市补贴旅费)
 1. [天津一儿童疑遭开门杀后被公交碾压](https://so.toutiao.com/search?keyword=天津一儿童疑遭开门杀后被公交碾压)
 1. [商家回应儿童积木现不雅图案：赔2元](https://so.toutiao.com/search?keyword=商家回应儿童积木现不雅图案：赔2元)
-1. [专家：台湾人患巴以冲突心理创伤症](https://so.toutiao.com/search?keyword=专家：台湾人患巴以冲突心理创伤症)
 1. [专家谈沪指破3000点次数超50次](https://so.toutiao.com/search?keyword=专家谈沪指破3000点次数超50次)
 1. [科大讯飞回应美国AI芯片出口管制](https://so.toutiao.com/search?keyword=科大讯飞回应美国AI芯片出口管制)
 1. [绝食24天的李在明将恢复履职](https://so.toutiao.com/search?keyword=绝食24天的李在明将恢复履职)
@@ -97,7 +120,6 @@
 1. [律师：抢运动员水杯女子构成抢夺罪](https://so.toutiao.com/search?keyword=律师：抢运动员水杯女子构成抢夺罪)
 1. [三只羊沈阳分公司开业](https://so.toutiao.com/search?keyword=三只羊沈阳分公司开业)
 1. [普京在京开记者会 出场满满中国风](https://so.toutiao.com/search?keyword=普京在京开记者会+出场满满中国风)
-1. [网友：智利总统来找我买水晶了](https://so.toutiao.com/search?keyword=网友：智利总统来找我买水晶了)
 1. [媒体：碧桂园求解境外债困局](https://so.toutiao.com/search?keyword=媒体：碧桂园求解境外债困局)
 1. [美方又炒“中国有超500枚核弹头”](https://so.toutiao.com/search?keyword=美方又炒“中国有超500枚核弹头”)
 1. [吃头孢能治支原体肺炎？谣言](https://so.toutiao.com/search?keyword=吃头孢能治支原体肺炎？谣言)
@@ -213,7 +235,6 @@
 1. [以色列特拉维夫响起火箭弹防空警报](https://so.toutiao.com/search?keyword=以色列特拉维夫响起火箭弹防空警报)
 1. [中国式签单效率](https://so.toutiao.com/search?keyword=中国式签单效率)
 1. [江西德兴惊现南宋时期珍贵文物](https://so.toutiao.com/search?keyword=江西德兴惊现南宋时期珍贵文物)
-1. [网友画图解读广州出租撞宝马过程](https://so.toutiao.com/search?keyword=网友画图解读广州出租撞宝马过程)
 1. [博主：戴琳总计执行标的超350万元](https://so.toutiao.com/search?keyword=博主：戴琳总计执行标的超350万元)
 1. [“双十一”带旺俄罗斯电商销售](https://so.toutiao.com/search?keyword=“双十一”带旺俄罗斯电商销售)
 1. [约旦国王会见埃及总统](https://so.toutiao.com/search?keyword=约旦国王会见埃及总统)
